Fixing tables on mobile

--- a/static/less/style.less
+++ b/static/less/style.less
@@ -181,3 +181,11 @@ ul.nav.nav-tabs {
 		border: 1px solid #54cc54;
 	}
 }
+.admin-btns .btn {
+	float: none;
+}
+
+#menu {
+	margin-left: 0px;
+	padding-left: 1em;
+}
